--- a/RelatedChat/Classes/Welcome/RegisterEmail/RegisterEmailView.xib
+++ b/RelatedChat/Classes/Welcome/RegisterEmail/RegisterEmailView.xib
@@ -3,93 +3,135 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="RegisterEmailView">
             <connections>
-                <outlet property="cellButton" destination="Wd0-et-tSf" id="XdO-l5-2iG"/>
-                <outlet property="cellEmail" destination="L50-zu-PUp" id="3Dh-td-xHU"/>
-                <outlet property="cellPassword" destination="n5g-Gd-0J5" id="QDc-2p-WWZ"/>
-                <outlet property="fieldEmail" destination="V6V-YD-OAr" id="fPy-fe-rbK"/>
+                <outlet property="fieldEmail" destination="wiw-WP-O7Z" id="HWp-dY-ktI"/>
                 <outlet property="fieldPassword" destination="OZ7-2i-VuJ" id="l0p-1c-ePw"/>
-                <outlet property="view" destination="4" id="5"/>
+                <outlet property="view" destination="uLw-1p-iTN" id="mG2-8T-qhz"/>
             </connections>
         </placeholder>
-        <tableView opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" bouncesZoom="NO" style="grouped" separatorStyle="default" rowHeight="50" sectionHeaderHeight="10" sectionFooterHeight="10" id="4">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
-            <connections>
-                <outlet property="dataSource" destination="-1" id="6"/>
-                <outlet property="delegate" destination="-1" id="7"/>
-            </connections>
-        </tableView>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" id="L50-zu-PUp">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="50"/>
+        <view contentMode="scaleToFill" id="uLw-1p-iTN">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="L50-zu-PUp" id="fuJ-o0-WoK">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="49"/>
-                <autoresizingMask key="autoresizingMask"/>
-                <subviews>
-                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="V6V-YD-OAr">
-                        <rect key="frame" x="15" y="0.0" width="290" height="50"/>
-                        <fontDescription key="fontDescription" type="system" weight="light" pointSize="16"/>
-                        <textInputTraits key="textInputTraits" autocorrectionType="no" keyboardType="emailAddress" returnKeyType="next"/>
-                        <connections>
-                            <outlet property="delegate" destination="-1" id="tZe-gI-9iw"/>
-                        </connections>
-                    </textField>
-                </subviews>
-                <constraints>
-                    <constraint firstItem="V6V-YD-OAr" firstAttribute="centerX" secondItem="fuJ-o0-WoK" secondAttribute="centerX" id="8Ls-Vd-yld"/>
-                    <constraint firstItem="V6V-YD-OAr" firstAttribute="top" secondItem="fuJ-o0-WoK" secondAttribute="top" id="gSa-Ec-d3I"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="V6V-YD-OAr" secondAttribute="bottom" constant="-9" id="jNY-Lf-DwE"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="V6V-YD-OAr" secondAttribute="trailing" constant="7" id="tQc-Aa-EYU"/>
-                </constraints>
-            </tableViewCellContentView>
-        </tableViewCell>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" id="n5g-Gd-0J5">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="50"/>
-            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="n5g-Gd-0J5" id="7jJ-MM-3QG">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="49"/>
-                <autoresizingMask key="autoresizingMask"/>
-                <subviews>
-                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="OZ7-2i-VuJ">
-                        <rect key="frame" x="15" y="0.0" width="290" height="50"/>
-                        <fontDescription key="fontDescription" type="system" weight="light" pointSize="16"/>
-                        <textInputTraits key="textInputTraits" autocorrectionType="no" returnKeyType="done" secureTextEntry="YES"/>
-                        <connections>
-                            <outlet property="delegate" destination="-1" id="71w-8C-eB3"/>
-                        </connections>
-                    </textField>
-                </subviews>
-                <constraints>
-                    <constraint firstItem="OZ7-2i-VuJ" firstAttribute="top" secondItem="7jJ-MM-3QG" secondAttribute="top" id="DH9-1N-Alf"/>
-                    <constraint firstItem="OZ7-2i-VuJ" firstAttribute="centerX" secondItem="7jJ-MM-3QG" secondAttribute="centerX" id="R78-zX-PVq"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="OZ7-2i-VuJ" secondAttribute="bottom" constant="-9" id="jca-DB-6Py"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="OZ7-2i-VuJ" secondAttribute="trailing" constant="7" id="vHv-08-668"/>
-                </constraints>
-            </tableViewCellContentView>
-        </tableViewCell>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" textLabel="oUK-VI-7qq" style="IBUITableViewCellStyleDefault" id="Wd0-et-tSf">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="50"/>
-            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Wd0-et-tSf" id="s8i-O0-Wwd">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="49"/>
-                <autoresizingMask key="autoresizingMask"/>
-                <subviews>
-                    <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="REGISTER" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="oUK-VI-7qq">
-                        <rect key="frame" x="15" y="0.0" width="290" height="49"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                        <color key="textColor" red="0.0" green="0.50196078431372548" blue="0.25098039215686274" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                </subviews>
-            </tableViewCellContentView>
-        </tableViewCell>
+            <subviews>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="register_logo.png" translatesAutoresizingMaskIntoConstraints="NO" id="48r-Bw-s3e">
+                    <rect key="frame" x="120" y="70" width="80" height="80"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="80" id="ADN-Xo-rSX"/>
+                        <constraint firstAttribute="width" constant="80" id="IIM-HK-v4s"/>
+                    </constraints>
+                </imageView>
+                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wiw-WP-O7Z">
+                    <rect key="frame" x="15" y="200" width="290" height="50"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="50" id="2X9-o9-gfl"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" weight="light" pointSize="16"/>
+                    <textInputTraits key="textInputTraits" autocorrectionType="no" keyboardType="emailAddress" returnKeyType="next"/>
+                    <connections>
+                        <outlet property="delegate" destination="-1" id="8qe-Fa-NGr"/>
+                    </connections>
+                </textField>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SkL-eY-oeP">
+                    <rect key="frame" x="15" y="250" width="290" height="1"/>
+                    <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="1" id="7JI-Ua-gbW"/>
+                    </constraints>
+                </view>
+                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="OZ7-2i-VuJ">
+                    <rect key="frame" x="15" y="250" width="290" height="50"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="50" id="uSS-5O-MMQ"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" weight="light" pointSize="16"/>
+                    <textInputTraits key="textInputTraits" autocorrectionType="no" returnKeyType="done" secureTextEntry="YES"/>
+                    <connections>
+                        <outlet property="delegate" destination="-1" id="71w-8C-eB3"/>
+                    </connections>
+                </textField>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6WO-1D-5cz">
+                    <rect key="frame" x="15" y="300" width="290" height="1"/>
+                    <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="1" id="zWr-mk-HlB"/>
+                    </constraints>
+                </view>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jVC-Fi-mBC">
+                    <rect key="frame" x="20" y="320" width="280" height="50"/>
+                    <color key="backgroundColor" red="0.49803921568627452" green="0.73333333333333328" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="50" id="4Km-aX-bJN"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                    <state key="normal" title="Sign Up">
+                        <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="titleShadowColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </state>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                            <integer key="value" value="5"/>
+                        </userDefinedRuntimeAttribute>
+                    </userDefinedRuntimeAttributes>
+                    <connections>
+                        <action selector="actionRegister:" destination="-1" eventType="touchUpInside" id="1RP-MK-VWf"/>
+                    </connections>
+                </button>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="By signing up you accept the Terms &amp; Privacy" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5I3-OK-1j5">
+                    <rect key="frame" x="0.0" y="380" width="320" height="21"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="21" id="ckH-l3-0sq"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                    <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YvS-O5-gyd">
+                    <rect key="frame" x="0.0" y="518" width="320" height="50"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="50" id="Rbq-Ge-kEx"/>
+                    </constraints>
+                    <state key="normal" title="Already have an account? Sign In">
+                        <color key="titleColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
+                    <connections>
+                        <action selector="actionDismiss:" destination="-1" eventType="touchUpInside" id="KlL-eU-55A"/>
+                    </connections>
+                </button>
+            </subviews>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstItem="6WO-1D-5cz" firstAttribute="leading" secondItem="uLw-1p-iTN" secondAttribute="leading" constant="15" id="0df-0I-DOK"/>
+                <constraint firstAttribute="trailing" secondItem="wiw-WP-O7Z" secondAttribute="trailing" constant="15" id="1IY-gi-r0O"/>
+                <constraint firstItem="jVC-Fi-mBC" firstAttribute="top" secondItem="uLw-1p-iTN" secondAttribute="top" constant="320" id="5DW-a0-4gH"/>
+                <constraint firstItem="SkL-eY-oeP" firstAttribute="leading" secondItem="uLw-1p-iTN" secondAttribute="leading" constant="15" id="5gj-Uu-FvV"/>
+                <constraint firstAttribute="bottom" secondItem="YvS-O5-gyd" secondAttribute="bottom" id="7fE-lG-wwl"/>
+                <constraint firstItem="5I3-OK-1j5" firstAttribute="top" secondItem="uLw-1p-iTN" secondAttribute="top" constant="380" id="DzQ-ow-skw"/>
+                <constraint firstAttribute="trailing" secondItem="5I3-OK-1j5" secondAttribute="trailing" id="EQ5-jC-spL"/>
+                <constraint firstItem="SkL-eY-oeP" firstAttribute="top" secondItem="uLw-1p-iTN" secondAttribute="top" constant="250" id="F7V-F2-eUb"/>
+                <constraint firstItem="5I3-OK-1j5" firstAttribute="leading" secondItem="uLw-1p-iTN" secondAttribute="leading" id="G5T-8d-m4X"/>
+                <constraint firstItem="jVC-Fi-mBC" firstAttribute="leading" secondItem="uLw-1p-iTN" secondAttribute="leading" constant="20" id="GBV-TN-QhC"/>
+                <constraint firstItem="wiw-WP-O7Z" firstAttribute="top" secondItem="uLw-1p-iTN" secondAttribute="top" constant="200" id="Huf-vq-0M1"/>
+                <constraint firstAttribute="trailing" secondItem="OZ7-2i-VuJ" secondAttribute="trailing" constant="15" id="Jvd-0C-aXw"/>
+                <constraint firstAttribute="trailing" secondItem="6WO-1D-5cz" secondAttribute="trailing" constant="15" id="Okt-eY-d09"/>
+                <constraint firstItem="OZ7-2i-VuJ" firstAttribute="top" secondItem="uLw-1p-iTN" secondAttribute="top" constant="250" id="PoM-ji-dMg"/>
+                <constraint firstAttribute="trailing" secondItem="jVC-Fi-mBC" secondAttribute="trailing" constant="20" id="Tw8-4Y-BmC"/>
+                <constraint firstItem="48r-Bw-s3e" firstAttribute="centerX" secondItem="uLw-1p-iTN" secondAttribute="centerX" id="aaF-C6-OUO"/>
+                <constraint firstItem="48r-Bw-s3e" firstAttribute="top" secondItem="uLw-1p-iTN" secondAttribute="top" constant="70" id="chA-yq-jZ2"/>
+                <constraint firstItem="6WO-1D-5cz" firstAttribute="top" secondItem="uLw-1p-iTN" secondAttribute="top" constant="300" id="dEA-Gn-Tpb"/>
+                <constraint firstAttribute="trailing" secondItem="SkL-eY-oeP" secondAttribute="trailing" constant="15" id="fGm-uz-1BC"/>
+                <constraint firstItem="OZ7-2i-VuJ" firstAttribute="leading" secondItem="uLw-1p-iTN" secondAttribute="leading" constant="15" id="hwO-7s-wiJ"/>
+                <constraint firstItem="YvS-O5-gyd" firstAttribute="leading" secondItem="uLw-1p-iTN" secondAttribute="leading" id="uLt-xr-jI5"/>
+                <constraint firstItem="wiw-WP-O7Z" firstAttribute="leading" secondItem="uLw-1p-iTN" secondAttribute="leading" constant="15" id="ukG-Zp-SeL"/>
+                <constraint firstAttribute="trailing" secondItem="YvS-O5-gyd" secondAttribute="trailing" id="wWf-GX-LzL"/>
+            </constraints>
+            <point key="canvasLocation" x="465" y="974"/>
+        </view>
     </objects>
+    <resources>
+        <image name="register_logo.png" width="80" height="80"/>
+    </resources>
 </document>
